# oracle

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUILD.md  CLAUDE.md  README.md  SOUL.md  biome.json  go.mod  go.sum  magefile.go  main.go  manage-bot.ts  manage_bot.py  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml
app/: __init__.py  __main__.py  bot.py  config.py  errors.py  logging.py  scryfall.py
bots/mtg-card-bot/: main.go
discord/: bot.go
docs/: discord-setup-guide.md
mtg_card_bot/: __main__.py  bot.py  errors.py  logging.py  scryfall.py
oracle/: __init__.py  __main__.py  bot.py  config.py  errors.py  logging.py  scryfall.py
pkg/config/: config.go
pkg/discord/: bot.go
pkg/scryfall/: client.go
src/: bot.ts  config.ts  errors.ts  index.ts  logger.ts  scryfall.ts
src/mtg_card_bot/: bot.py  grid.py  scryfall.py
tests/: bot.test.ts  config.test.ts  scryfall.test.ts  test_bot.py  test_config.py  test_errors.py  test_grid.py  test_scryfall.py
