[project]
name = "scryfall-discord-bot"
version = "2.0.0"
description = "Discord bot for Magic: The Gathering card lookups via the Scryfall API"
authors = [
    {name = "Sawyer", email = "sawyer@example.com"},
]
requires-python = ">=3.12"
dependencies = [
    "discord.py>=2.0.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.12.9",
    "mypy>=1.17.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
scryfall-discord-bot = "app.__main__:main"
app = "app.__main__:main"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PTH", "RUF"]
ignore = ["COM812", "ISC001", "E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "discord.*"
ignore_missing_imports = true
